--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ form {
     display: inline;
     align-items: center;
     margin-top: 20px;
-    background-color: #FFDDAE;
 }
 
 input {
@@ -53,6 +52,27 @@ input {
     background:none;
     border: none;
 }
+
+/* From Uiverse.io by shadowmurphy */ 
+input {
+    border: 2px solid transparent;
+    width: 15em;
+    height: 1.5em;
+    padding-left: 0.8em;
+    outline: none;
+    overflow: hidden;
+    background-color: #F3F3F3;
+    border-radius: 10px;
+    transition: all 0.5s;
+  }
+  
+input:hover, input:focus {
+    border: 2px solid #EEEEEE;
+    box-shadow: 0px 0px 0px 7px rgb(155, 126, 189, 20%);
+    
+    background-color: white;
+  }
+  
 
 #middle {
     margin-top: 100px;
